syntax = "proto3";

package engine_data;

message EngineStatus {
  float rpm = 1;
  float temp = 2; // Assuming temperature in Celsius
  float oil_pressure = 3; // Assuming pressure in PSI or Bar, specify in documentation
  int32 gear = 4;
  float speed = 5;
}
